# KossJS

./: .gitignore  CHANGELOG.md  Cargo.toml  KossJS 对 NodeJS 内置库的支持状态表.md  LICENSE.md  README.md  a.js  b.js  build.rs  debug_test.py  kossjs_interface.py  kossjs_interface.ts  package_find.md  quick_test.py  test.py  test.ts  test_fetch.py  test_fetch2.py  test_fetch3.py  test_fetch4.py  test_modules.py  安全与沙箱设计.md  安全与沙箱设计_实现步骤.md  更新设计.md  运行时 API 获取设计.md  运行时 API 获取设计_实现步骤.md
.github/: FUNDING.yml
.github/workflows/: build_and_test.yml
docs/superpowers/plans/: 2026-06-11-sandbox-security-v1.4.md
docs/superpowers/specs/: 2026-07-18-kossjs-future-development-design.md
include/: kossjs.h
src/: bindings.rs  buffer.rs  builtins.rs  embedded_stdlib.rs  lib.rs  license_output.rs  module_loader.rs  resolver.rs  runtime.rs  sandbox.rs  version.rs  worker.rs
src/_senri_ffi/: call.rs  callback.rs  library.rs  memory.rs  mod.rs  pointer.rs  struct_def.rs  types.rs
src/fetch/: README.md  simple-fetch.js
src/fetch/src/: index.js
src/js_shims/: bun_shim.js  deno_shim.js
src/js_shims/internal/: crypto.js  fs.js  net.js  stream.js
src/js_shims/koss_shim/: crypto.js  data.js  ffi.js  io.js  system.js  worker.js
src/js_shims/node_shim/: assert.js  buffer.js  constants.js  crypto.js  dgram.js  diagnostics_channel.js  dns.js  events.js  fs.js  http.js  https.js  net.js  os.js  path.js  perf_hooks.js  process.js  querystring.js  stream.js  string_decoder.js  timers.js  tls.js  trace_events.js  url.js  util.js  zlib.js
src/napi/: async_runtime.rs  env.rs  mod.rs  status.rs  value.rs
src/napi/functions/: array.rs  async_work.rs  buffer.rs  class.rs  error.rs  external.rs  function.rs  instance_data.rs  lifecycle.rs  mod.rs  object.rs  primitives.rs  reference.rs  string.rs
src/stdlib/: LICENSE  README.md  _http_agent.js  _http_client.js  _http_common.js  _http_incoming.js  _http_outgoing.js  _http_server.js  _tls_common.js  _tls_wrap.js  assert.js  async_hooks.js  buffer.js  child_process.js  cluster.js  console.js  constants.js  crypto.js  dgram.js  diagnostics_channel.js  dns.js  domain.js  events.js  fs.js  http.js  http2.js  https.js  inspector.js  module.js  net.js  os.js  path.js  perf_hooks.js  process.js  punycode.js  querystring.js  quic.js  readline.js  repl.js  sea.js  (+16 more)
src/stdlib/assert/: strict.js
src/stdlib/dns/: promises.js
src/stdlib/fs/: promises.js
src/stdlib/inspector/: promises.js
src/stdlib/internal/: abort_controller.js  assert.js  async_context_frame.js  async_hooks.js  blob.js  blocklist.js  buffer.js  child_process.js  cli_table.js  constants.js  data_url.js  dgram.js  encoding.js  error_serdes.js  errors.js  errors_stub.js  event_target.js  file.js  fixed_queue.js  freelist.js  freeze_intrinsics.js  heap_utils.js  histogram.js  http.js  inspector_async_hook.js  inspector_network_tracking.js  js_stream_socket.js  linkedlist.js  locks.js  mime.js  navigator.js  net.js  options.js  priority_queue.js  promise_hooks.js  querystring.js  repl.js  socket_list.js  (+15 more)
test/: conftest.py  kossjs_interface.py  test_bun_api.py  test_core_api.py  test_deno_api.py  test_esm_import.py  test_features.py  test_fetch.py  test_koss_native.py  test_koss_protocol.py  test_module.py  test_module_loader.py  test_sandbox_audit.py  test_sandbox_audit_mask.py  test_sandbox_capabilities.py  test_sandbox_crypto.py  test_sandbox_debug.py  test_sandbox_decision.py  test_sandbox_ffi.py  test_sandbox_fs.py  test_sandbox_net.py  test_sandbox_other_caps.py  test_stable_mode.py
test/test_stdlib_api/: conftest.py  test_assert.py  test_buffer.py  test_crypto.py  test_diagnostics_channel.py  test_net.py  test_os.py  test_path.py  test_perf_hooks.py  test_process.py  test_querystring.py  test_timers.py  test_trace_events.py  test_unsupported.py  test_url.py  test_util.py  test_zlib_dgram.py
(+248 files in other folders)
