[package]
name = "kossjs"
version = "0.1.0-dev.3"
edition = "2024"
description = "Embeddable JavaScript runtime as a dynamic library"
license = "GNU Affero General Public License v3.0"

[lib]
name = "kossjs"
crate-type = ["cdylib", "rlib"]

[dependencies]
boa_engine = "0.21.1"
boa_parser = "0.21.1"
boa_runtime = "0.21.1"
boa_gc = "0.21.1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
base64 = "0.22"
num_cpus = "1"
url = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"