[package]
name = "kossjs"
version = "0.1.0-dev.5.fix"
edition = "2024"
description = "Embeddable JavaScript runtime as a dynamic library"
license = "GNU Affero General Public License v3.0"
authors = ["TT23XR Studio"]

[lib]
name = "kossjs"
crate-type = ["cdylib", "rlib"]

[dependencies]
boa_engine = "0.21.1"
boa_parser = "0.21.1"
boa_runtime = "0.21.1"
boa_gc = "0.21.1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
once_cell = "1"
base64 = "0.22"
num_cpus = "1"
url = "2"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
rustls = "0.23"
rustls-native-certs = "0.8"
webpki-roots = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "fs", "net", "time"] }
rand = "0.10.1"
sha1 = "0.11"
sha2 = "0.11"
md-5 = "0.11"
hmac = "0.13"
pbkdf2 = "0.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "ios")'.dependencies]
# iOS 无额外依赖，预留扩展

[target.'cfg(target_os = "ohos")'.dependencies]
# HarmonyOS 无额外依赖，预留扩展
